--- a/packages/experiments/src/components/Grid/grid/Grid.scss
+++ b/packages/experiments/src/components/Grid/grid/Grid.scss
@@ -2,12 +2,12 @@
 @import '../common/_fabric';
 $validationColor: #fde7e9;
 
-.validation-callout {
+.validationCallout {
     .ms-Callout-beak,
     .ms-Callout-main {
         background-color: $validationColor;
     }
-    .validation-callout-content {
+    .validationCalloutContent {
         padding: 10px;
         @include flex-parent(row);
         align-items: center;
@@ -16,7 +16,7 @@ $validationColor: #fde7e9;
             color: $ms-color-red;
             @include flex-child-sizeFixed(auto);
         }
-        .validation-message {
+        .validationMessage {
             @include ms-font-s;
             @include flex-child-sizeFlexible(auto);
             @include ms-margin-left(10px);
