--- a/packages/experiments/src/components/Grid/editors/predecessorEditor/PredecessorEditor.scss
+++ b/packages/experiments/src/components/Grid/editors/predecessorEditor/PredecessorEditor.scss
@@ -1,4 +1,6 @@
 @import '../../common/fabric';
+@import '~office-ui-fabric-react/src/common/common';
+:global
 .tag-editor-container {
     width: 100%;
     padding: 0;
