--- a/packages/experiments/src/components/Grid/list/List.scss
+++ b/packages/experiments/src/components/Grid/list/List.scss
@@ -1,6 +1,7 @@
 @import '../common/_mixins.scss';
 @import '../common/_fabric';
-
+@import '~office-ui-fabric-react/src/common/common';
+:global
 .grid-list .grid-body {
     .grid-row {
         box-sizing: border-box;
