--- a/packages/experiments/src/components/Grid/types/HierarchyCell.scss
+++ b/packages/experiments/src/components/Grid/types/HierarchyCell.scss
@@ -1,6 +1,7 @@
 @import '../common/_mixins.scss';
 @import '../common/_fabric.scss';
-
+@import '~office-ui-fabric-react/src/common/common';
+:global
 .hierarchy-cell {
     @include flex-parent(row);
 
