--- a/packages/experiments/src/components/Grid/controls/resourcePicker/ResourceList.scss
+++ b/packages/experiments/src/components/Grid/controls/resourcePicker/ResourceList.scss
@@ -1,5 +1,5 @@
-@import "../../common/_mixins";
-@import "../../common/_fabric";
+@import '../../common/_mixins';
+@import '../../common/_fabric';
 @import '~office-ui-fabric-react/src/common/common';
 :global
 .resource-list-result-group-title {
