--- a/packages/experiments/src/components/Grid/common/_constantFabric.scss
+++ b/packages/experiments/src/components/Grid/common/_constantFabric.scss
@@ -1,3 +1,3 @@
-$fabric-persona-primary-text: ".ms-Persona-primaryText";
-$fabric-persona-secondary-text: ".ms-Persona-secondaryText";
-$fabric-search-box: ".ms-SearchBox";
+$fabric-persona-primary-text: '.ms-Persona-primaryText';
+$fabric-persona-secondary-text: '.ms-Persona-secondaryText';
+$fabric-search-box: '.ms-SearchBox';
